k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devlink-backend-service
spec:
  selector:
    app: devlink-backend
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
