k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devlink-frontend-service
spec:
  selector:
    app: devlink-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
