k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devlink-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devlink.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devlink-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devlink-frontend-service
                port:
                  number: 80
